Chibi fixes